  is to unify this method call with similar methods of CommandGenerator.
  This change should not compromise backward compatibility with pysnmp 4.

Revision 4.4.9, released 2018-12-XX
-----------------------------------
- Made MIB loader ignoring file and directory access errors
- Fixed crash on MIB load failure in case of directory access error

Revision 4.4.8, released 2018-12-30
-----------------------------------

- Fixed Pythonized MIB load (in the source form) - made sure to turn
  it into a code object prior to its execution

Revision 4.4.7, released 2018-12-29
-----------------------------------

- Copyright notice extended to the year 2019
- Exposed ASN.1 `Null` type through `rfc1902` module for convenience.
- Use `compile()` before `exec`'ing MIB modules to attach filename to
  the stack frames (ultimately shown in traceback/debugger)
- Fixed hlapi/v3arch transport target caching to ensure transport targets
  are different even if just timeout/retries options differ
- Fixed hlapi LCD configurator to include `contextName`. Prior to this fix
  sending SNMPv3 TRAP with non-default `contextName` would fail.
- Fixed possible duplicate key occurrence in the `OrderedDict` following
  a race condition
- Fixed undefined name references in `inet_pton`/`inet_ntop` substitute
  routines for IPv6 in `TRANSPORT-ADDRESS-MIB.py`

Revision 4.4.6, released 2018-09-13
-----------------------------------

- Improved package build and dependency tracking
- Fixed missing LICENSE from the tarball distribution
- Fixed `CommandGeneratorLcdConfigurator.unconfigure()` to fully clean up
  internal caches, otherwise repetitive attempts to configure the target
  would fail.
- Fix to tolerate possible duplicate enumerations in `Bits` and `Integer`
  SMI types.
- Fix to tolerate non-initialised entries in SNMP community table. Once a
  bad entry sneaked into the SNMP community table, all the subsequent
  SNMP v1/v2c operations failed. The fix ignores incomplete SNMP community