@@ -88,6 +88,8 @@ Revision 4.4.9, released 2018-12-XX
 -----------------------------------
 - Made MIB loader ignoring file and directory access errors
 - Fixed crash on MIB load failure in case of directory access error
+- Fixed socket transparency option (IPV6_TRANSPARENT)to make IPv6
+  transparent operation functional
 
 Revision 4.4.8, released 2018-12-30
 -----------------------------------
